objects/BMCServiceDesk__Release_History__c.object
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpReleaseHistory</customHelpPage>
    <description>Stores history data of all actions that have been performed on a release.</description>
    <fields>
        <fullName>BMCServiceDesk__Action__c</fullName>
        <formula>BMCServiceDesk__FKAction__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Created_By__c</fullName>
        <formula>BMCServiceDesk__FKCreated_By__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKAction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Action__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__Action__c.BMCServiceDesk__appliesToRelease__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__Action__c.BMCServiceDesk__Display_In_SelfService__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Action__c</referenceTo>
        <relationshipLabel>Related Releases</relationshipLabel>
        <relationshipName>Release_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKCreated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sender</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKRelease__c</fullName>
        <label>Release</label>
        <referenceTo>BMCServiceDesk__Release__c</referenceTo>
        <relationshipLabel>Action History</relationshipLabel>
        <relationshipName>Release_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKStaff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field holds assigned staff information from parent record.</description>
        <inlineHelpText>This field holds assigned staff information from parent record.</inlineHelpText>
        <label>Current Staff</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Histories_Staff</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Formatted_Duration__c</fullName>
        <formula>LPAD(TEXT( FLOOR((BMCServiceDesk__Duration__c / 60))),2,TEXT(0)) &amp; &quot;:&quot; &amp; LPAD(TEXT(MOD(BMCServiceDesk__Duration__c , 60)),2,TEXT(0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Note__c</fullName>
        <label>Note</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__System__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System</label>
        <type>Checkbox</type>
    </fields>
    <label>Release History</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Release History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__Action_ID_Required</fullName>
        <active>true</active>
        <description>This rule checks for blank or empty Action</description>
        <errorConditionFormula>OR( ISNULL(BMCServiceDesk__FKAction__c) , ISBLANK(BMCServiceDesk__FKAction__c))</errorConditionFormula>
        <errorMessage>Please enter Action.</errorMessage>
    </validationRules>
</CustomObject>